media/media-route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: plex
    app.kubernetes.io/component: plex
    app.kubernetes.io/instance: media
    app.kubernetes.io/part-of: plex
  name: plex
  namespace: media
spec:
  host: plex.apps.snolab.csfreak.com
  port:
    targetPort: pms
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: plex
    weight: 100
  wildcardPolicy: None
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: nzbget
    app.kubernetes.io/component: nzbget
    app.kubernetes.io/instance: nzbget
    app.kubernetes.io/part-of: nzbget
  name: nzbget
  namespace: media
spec:
  host: nzbget-media.apps.snolab.csfreak.com
  port:
    targetPort: 6789-tcp
  to:
    kind: Service
    name: nzbget
    weight: 100
  wildcardPolicy: None
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: sonarr
    app.kubernetes.io/component: sonarr
    app.kubernetes.io/instance: sonarr
    app.kubernetes.io/part-of: sonarr
  name: sonarr
  namespace: media
spec:
  host: sonarr-media.apps.snolab.csfreak.com
  port:
    targetPort: 8989-tcp
  to:
    kind: Service
    name: sonarr
    weight: 100
  wildcardPolicy: None
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: radarr
    app.kubernetes.io/component: radarr
    app.kubernetes.io/instance: media
    app.kubernetes.io/part-of: radarr
  name: radarr
  namespace: media
spec:
  host: radarr-media.apps.snolab.csfreak.com
  port:
    targetPort: 7878-tcp
  to:
    kind: Service
    name: radarr
    weight: 100
  wildcardPolicy: None
